--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,4 +35,5 @@ trigger_aggregator_pipeline:
   only:
     - main
   script:
+    - echo $CI_JOB_TOKEN
     - curl -X POST -F token=$CI_JOB_TOKEN -F ref=main https://gitlab.com/api/v4/projects/cicd-training2/aggregator/pipeline
