--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,8 @@ build_job:
     - JAR_NAME=$(echo "$ARTIFACT_ID-$VERSION")
     - echo $JAR_NAME
     - mvn $MAVEN_CLI_OPTS clean install
-  dependencies:
-    - test_job
+  # dependencies:
+  #   - test_job
   artifacts:
     paths:
       - target/*.jar
