--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,11 +28,20 @@ build_job:
     paths:
       - target/*.jar
 
-trigger_aggregator_pipeline:
+# trigger_aggregator_pipeline:
+#   stage: trigger
+#   dependencies:
+#     - build_job
+#   only:
+#     - main
+#   script:
+#     - curl --request POST --form token=$AGGREGATOR_PIPELINE_TOKEN --form ref=main "https://gitlab.com/api/v4/projects/52100758/trigger/pipeline"
+
+trigger_dependant_projects:
   stage: trigger
-  dependencies:
-    - build_job
-  only:
-    - main
-  script:
-    - curl --request POST --form token=$AGGREGATOR_PIPELINE_TOKEN --form ref=main "https://gitlab.com/api/v4/projects/52100758/trigger/pipeline"
+  parallel:
+    matrix:
+    - DOMAIN_DEPENDENCIES:
+      - cicd-training2/aggregator
+  trigger:
+    project: "$DOMAIN_DEPENDENCIES"
