--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,15 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <scmCommentPrefix>Releasing $project.groupId:$project.artifactId-$project.version</scmCommentPrefix>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
@@ -64,5 +73,19 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>gitlab-maven</id>
+            <url>https://gitlab.com/api/v4/projects/52100006/packages/maven</url>
+        </repository>
+        <snapshotRepository>
+            <id>gitlab-maven</id>
+            <url>https://gitlab.com/api/v4/projects/52100006/packages/maven</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <scm>
+        <developerConnection>scm:git:git@gitlab.com:cicd-training2/domain-model.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
 </project>
