--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.deltasource.eu</groupId>
     <artifactId>domain-model</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>domain-model</name>
     <description>Domain model</description>
@@ -84,7 +84,7 @@
     </distributionManagement>
     <scm>
         <developerConnection>scm:git:git@gitlab.com:cicd-training2/domain-model.git</developerConnection>
-        <tag>domain-model-0.0.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
