--- a/pom.xml
+++ b/pom.xml
@@ -72,19 +72,19 @@
             </plugin>
         </plugins>
     </build>
-    <distributionManagement>
-        <repository>
-            <id>gitlab-maven</id>
-            <url>https://gitlab.com/api/v4/projects/52100006/packages/maven</url>
-        </repository>
-        <snapshotRepository>
-            <id>gitlab-maven</id>
-            <url>https://gitlab.com/api/v4/projects/52100006/packages/maven</url>
-        </snapshotRepository>
-    </distributionManagement>
-    <scm>
-        <developerConnection>scm:git:git@gitlab.com:cicd-training2/domain-model.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>gitlab-maven</id>-->
+<!--            <url>https://gitlab.com/api/v4/projects/52100006/packages/maven</url>-->
+<!--        </repository>-->
+<!--        <snapshotRepository>-->
+<!--            <id>gitlab-maven</id>-->
+<!--            <url>https://gitlab.com/api/v4/projects/52100006/packages/maven</url>-->
+<!--        </snapshotRepository>-->
+<!--    </distributionManagement>-->
+<!--    <scm>-->
+<!--        <developerConnection>scm:git:git@gitlab.com:cicd-training2/domain-model.git</developerConnection>-->
+<!--        <tag>HEAD</tag>-->
+<!--    </scm>-->
 
 </project>
