--- a/pom.xml
+++ b/pom.xml
@@ -72,19 +72,27 @@
             </plugin>
         </plugins>
     </build>
+<!--    gitlab config-->
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>gitlab-maven</id>-->
+<!--            <url>https://gitlab.com/api/v4/projects/52156604/packages/maven</url>-->
+<!--        </repository>-->
+<!--        <snapshotRepository>-->
+<!--            <id>gitlab-maven</id>-->
+<!--            <url>https://gitlab.com/api/v4/projects/52156604/packages/maven</url>-->
+<!--        </snapshotRepository>-->
+<!--    </distributionManagement>-->
+<!--    <scm>-->
+<!--        <developerConnection>scm:git:git@gitlab.com:cicd-training2/domain-model.git</developerConnection>-->
+<!--        <tag>HEAD</tag>-->
+<!--    </scm>-->
     <distributionManagement>
         <repository>
-            <id>gitlab-maven</id>
-            <url>https://gitlab.com/api/v4/projects/52156604/packages/maven</url>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/EfremDubrovin/cicd-test</url>
         </repository>
-        <snapshotRepository>
-            <id>gitlab-maven</id>
-            <url>https://gitlab.com/api/v4/projects/52156604/packages/maven</url>
-        </snapshotRepository>
     </distributionManagement>
-    <scm>
-        <developerConnection>scm:git:git@gitlab.com:cicd-training2/domain-model.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
 
 </project>
