test local settings reference

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s ${{ secrets.SETTINGS_XML }}
+      run: mvn deploy -s /Users/efrem/.sdkman/candidates/maven/current/conf/settings_github.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
